# tim

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  background.cpp  background.h  background_sse2.cpp  benedek.cpp  benedek.h  classifier.cpp  classifier.h  direction.cpp  direction.h  editor.py  line.cpp  line.h  main.cpp  movingobject.cpp  movingobject.h  roi.py  shadows.cpp  shadows.h  siltp.cpp  siltp.h  simd_math.h  stauffergrimson.cpp  stauffergrimson.h  tim.cpp  tim.h  utils.cpp
GridCut/: AlphaExpansion_2D_4C.h  AlphaExpansion_2D_4C_MT.h  AlphaExpansion_2D_8C.h  AlphaExpansion_3D_26C.h  AlphaExpansion_3D_6C.h  AlphaExpansion_3D_6C_MT.h  GridGraph_2D_4C.h  GridGraph_2D_8C.h
cmake/: CMakeASM_YASMInformation.cmake
data/: act.json  biloxi.json  college.json  lausanne.json  university.json  zambrow.json
gco/: GCoptimization.cpp  GCoptimization.h
scripts/: roi.py
src/: CMakeLists.txt  background.cpp  background.h  background_sse2.cpp  benedek.cpp  benedek.h  classifier.cpp  classifier.h  colourclassifier.cpp  colourclassifier.h  direction.cpp  line.cpp  line.h  main.cpp  movingobject.cpp  movingobject.h  shadows.cpp  shadows.h  stauffergrimson.cpp  stauffergrimson.h  tim.cpp  tim.h  utils.h
src/sse2/: background.asm  background.c
